--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,5 +7,5 @@
   <label>Post Description</label><br>
   <%= ftext_area :description %><br>
 
-  <%= submit_tag "Submit Post" %>
+  <%= f.submit %>
 <% end %>
