--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :title %><br>
 
   <label>Post Description</label><br>
-  <%= ftext_area :description %><br>
+  <%= f.text_area :description %><br>
 
   <%= f.submit %>
 <% end %>
